:bug: 오류 해결 (#111)